# michi-micro-server

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/michi-server/: Cargo.toml
apps/michi-server/src/: main.rs
casaos/: data.yml  docker-compose.casaos.yml
clients/python-michi-client/: example.py  michi_client.py
clients/python-michi-player/: README.md  desktop_player.py  player.py
crates/michi-api/: Cargo.toml
crates/michi-api/src/: auth.rs  lib.rs  library.rs  openapi.rs  players.rs  pwa.rs  rooms.rs  root.rs  scrobble.rs  static_files.rs  status.rs  stream.rs  sync_api.rs  sync_ws.rs  transcode.rs  v1.rs  ws.rs
crates/michi-api/src/routes/v1/: announce.rs  artwork.rs  audit.rs  backup.rs  bookmarks.rs  chains.rs  dashboard.rs  diagnostics.rs  duplicates.rs  events.rs  favorites.rs  history.rs  import.rs  insights.rs  jobs.rs  library.rs  mod.rs  modules.rs  pair.rs  playback.rs  playlists.rs  queue.rs  radio.rs  receivers.rs  rooms.rs  search.rs  server.rs  sessions.rs  settings.rs  setup.rs  shares.rs  sources.rs  storage.rs  stream.rs  sync.rs  tracks.rs  validate.rs
crates/michi-api/static/: app.js  hero-cat.css  index.html  styles.css
crates/michi-api/static/i18n/: de.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  ru.json  zh.json
crates/michi-api/tests/: api.rs
crates/michi-client/: Cargo.toml
crates/michi-client/src/: client.rs  error.rs  lib.rs
crates/michi-config/: Cargo.toml
crates/michi-config/src/: lib.rs
crates/michi-connect/: Cargo.toml
crates/michi-connect/src/: lib.rs
crates/michi-core/: Cargo.toml
crates/michi-core/src/: lib.rs
crates/michi-db/: Cargo.toml
crates/michi-db/src/: lib.rs
crates/michi-homeassistant/: Cargo.toml
crates/michi-homeassistant/src/: lib.rs
crates/michi-identity/: Cargo.toml
crates/michi-identity/src/: lib.rs
crates/michi-ingest/: Cargo.toml
crates/michi-ingest/src/: lib.rs
crates/michi-link/: Cargo.toml
crates/michi-link/src/: auth.rs  device_registry.rs  errors.rs  lib.rs  models.rs  permissions.rs  version.rs
crates/michi-m3u/: Cargo.toml
crates/michi-m3u/src/: lib.rs
crates/michi-metadata/: Cargo.toml
crates/michi-metadata/src/: lib.rs
crates/michi-multiroom/: Cargo.toml
crates/michi-multiroom/src/: lib.rs
crates/michi-onboard/: Cargo.toml
crates/michi-onboard/src/: lib.rs
crates/michi-opensubsonic/: Cargo.toml
crates/michi-opensubsonic/src/: auth.rs  errors.rs  lib.rs  models.rs  routes.rs
crates/michi-receivers/: Cargo.toml
crates/michi-receivers/src/: client.rs  lib.rs  models.rs  session_manager.rs  simulator.rs
crates/michi-receivers/tests/: receiver_simulator_integration.rs
crates/michi-rooms/: Cargo.toml
crates/michi-rooms/src/: lib.rs
crates/michi-scanner/: Cargo.toml
crates/michi-scanner/src/: lib.rs  watcher.rs
crates/michi-security/: Cargo.toml
crates/michi-security/src/: idempotency.rs  lib.rs
crates/michi-streaming/: Cargo.toml
crates/michi-streaming/src/: lib.rs
crates/michi-sync/: Cargo.toml
crates/michi-sync/src/: lib.rs
crates/michi-tui/: Cargo.toml
crates/michi-tui/src/: api.rs  app.rs  main.rs  ui.rs
crates/michi-webui/: Cargo.toml
crates/michi-webui/static/: index.html
crates/michi-webui/static/css/: app.css  components.css  theme.css
crates/michi-webui/static/js/: api.js  app.js  player.js  ui.js
deploy/: install.sh  michi.conf  michi.service
deploy/debian/: control
docs/: API.md  ARCHITECTURE.md  AUTONOMOUS_PLAYBACK.md  CASAOS_ZIMAOS.md  CLIENT_INTEGRATION_SPEC.md  HOME_ASSISTANT.md  IMPLEMENTATION_EVIDENCE.md  MASTER_IMPLEMENTATION_CHECKLIST.md  METADATA.md  MICHI_LINK.md  MICHI_LINK_MICRO_BETA.md  MICHI_LINK_MICRO_E2E.md  PLAYER_IMPORT_FLOW.md  RECEIVER_INTEGRATION_PLAN.md  RELEASE_0_1_ALPHA.md  RESOURCE_BUDGET.md  ROADMAP.md  STREAM_SIMULATOR_INTEGRATION.md  inspirations.md  licensing.md  opensubsonic-compat.md
scripts/: run_receiver_sim_hifi.sh  run_receiver_sim_standard.sh  test_receiver_e2e.sh
tests/e2e/: test_player_micro_contract_compatibility.py
tests/fixtures/micro_contract/: commit_mapping.json  playback_state_paused.json  playback_state_playing.json  preflight_legacy.json  preflight_new.json  queue_transfer_result.json  upload_result.json
