[workspace]
resolver = "2"
members = [
    "apps/michi-server",
    "crates/michi-core",
    "crates/michi-api",
    "crates/michi-config",
    "crates/michi-db",
    "crates/michi-metadata",
    "crates/michi-scanner",
    "crates/michi-streaming",
    "crates/michi-homeassistant",
    "crates/michi-sync",
    "crates/michi-multiroom",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
lofty = "0.21"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
