[workspace]
resolver = "2"
members = [
    "apps/michi-server",
    "crates/michi-core",
    "crates/michi-api",
    "crates/michi-config",
    "crates/michi-db",
    "crates/michi-metadata",
    "crates/michi-scanner",
    "crates/michi-streaming",
    "crates/michi-m3u",
    "crates/michi-sync",
    "crates/michi-homeassistant",
    "crates/michi-tui",
    "crates/michi-client",
    "crates/michi-opensubsonic",
    "crates/michi-rooms",
    "crates/michi-link",
    "crates/michi-receivers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
lofty = "0.21"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
infer = "0.16"
futures-util = "0.3"
utoipa = { version = "5", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
argon2 = "0.5"
