[package]
name = "michi-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../../crates/michi-core" }
michi-api = { path = "../../crates/michi-api" }
michi-config = { path = "../../crates/michi-config" }
michi-db = { path = "../../crates/michi-db" }
michi-metadata = { path = "../../crates/michi-metadata" }
michi-scanner = { path = "../../crates/michi-scanner" }

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
