[package]
name = "michi-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-api = { path = "../../crates/michi-api" }
michi-config = { path = "../../crates/michi-config" }
michi-db = { path = "../../crates/michi-db" }
michi-homeassistant = { path = "../../crates/michi-homeassistant" }

tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
