[package]
name = "michi-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-config = { path = "../michi-config" }

axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
