[package]
name = "michi-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-config = { path = "../michi-config" }
michi-db = { path = "../michi-db" }
michi-scanner = { path = "../michi-scanner" }
michi-streaming = { path = "../michi-streaming" }

axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
tokio.workspace = true
chrono.workspace = true
sqlx.workspace = true
tempfile = "3"
