[package]
name = "michi-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-config = { path = "../michi-config" }
michi-db = { path = "../michi-db" }
michi-scanner = { path = "../michi-scanner" }
michi-streaming = { path = "../michi-streaming" }

axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
infer.workspace = true
futures-util.workspace = true
michi-metadata = { path = "../michi-metadata" }
michi-m3u = { path = "../michi-m3u" }
michi-sync = { path = "../michi-sync" }
tokio-tungstenite = "0.24"
chrono.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
argon2.workspace = true
michi-opensubsonic = { path = "../michi-opensubsonic" }
michi-rooms = { path = "../michi-rooms" }
michi-link = { path = "../michi-link" }
michi-receivers = { path = "../michi-receivers" }
michi-security = { path = "../michi-security" }
michi-ingest = { path = "../michi-ingest" }
mdns-sd = "0.13"
qrcode = { workspace = true }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
lazy_static = "1.4"
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2"

[dev-dependencies]
tower = "0.5"
tokio.workspace = true
chrono.workspace = true
serde_json.workspace = true
tempfile = "3"
urlencoding = "2"
futures-util.workspace = true
michi-m3u = { path = "../michi-m3u" }
michi-core = { path = "../michi-core" }
michi-receivers = { path = "../michi-receivers" }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
