[package]
name = "michi-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
