[package]
name = "michi-connect"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-identity = { path = "../michi-identity" }
mdns-sd = "0.13"
hex = "0.4"
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
qrcode = { workspace = true }

[dev-dependencies]
tempfile = "3"
