[package]
name = "michi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
utoipa = { version = "5", features = ["uuid", "chrono"] }

[dev-dependencies]
tempfile = "3"
