[package]
name = "michi-homeassistant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-sync = { path = "../michi-sync" }
michi-config = { path = "../michi-config" }
michi-db = { path = "../michi-db" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
sqlx.workspace = true
chrono.workspace = true
rumqttc = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
