[package]
name = "michi-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
