[package]
name = "michi-link"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-config = { path = "../michi-config" }
michi-db = { path = "../michi-db" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
argon2.workspace = true
rand = "0.8"
tokio.workspace = true
sha2 = "0.10"
hex = "0.4"
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }
