[package]
name = "michi-onboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-db = { path = "../michi-db" }
michi-core = { path = "../michi-core" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
sqlx.workspace = true
