[package]
name = "michi-opensubsonic"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-db = { path = "../michi-db" }
michi-streaming = { path = "../michi-streaming" }
michi-config = { path = "../michi-config" }

axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
