[package]
name = "michi-opensubsonic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-db = { path = "../michi-db" }
michi-streaming = { path = "../michi-streaming" }
michi-config = { path = "../michi-config" }
michi-scanner = { path = "../michi-scanner" }
michi-metadata = { path = "../michi-metadata" }

axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
rand = "0.8"
infer.workspace = true
tokio-util.workspace = true
