[package]
name = "michi-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-metadata = { path = "../michi-metadata" }
michi-db = { path = "../michi-db" }
sqlx.workspace = true

tracing.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile = "3"
