[package]
name = "michi-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
governor.workspace = true
nonzero_ext = "0.3"
validator.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
