[package]
name = "michi-streaming"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
michi-core = { path = "../michi-core" }
michi-db = { path = "../michi-db" }

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
sqlx.workspace = true

[dev-dependencies]
tempfile = "3"
