[package]
name = "michi-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
utoipa = { version = "5", features = ["uuid", "chrono"] }
