[package]
name = "michi-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "michi"
path = "src/main.rs"

[dependencies]
michi-core = { path = "../michi-core" }
michi-client = { path = "../michi-client" }

ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid.workspace = true
chrono.workspace = true
