[package]
name = "michi-webui"
version = "0.3.0"
edition = "2021"
description = "Ultra Premium Web UI for Michi Micro Server"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true, features = ["fs", "cors"] }
tracing = { workspace = true }
uuid = { workspace = true }
michi-core = { path = "../michi-core" }
michi-api = { path = "../michi-api" }

[features]
default = []
dev = []
